--- a/X-Odds ROUTES 1.ipynb
+++ b/X-Odds ROUTES 1.ipynb
@@ -10,35 +10,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# -------------------------------------------------- Start at 2023-03-25 22:32:11\n",
+      "# -------------------------------------------------- Start at 2023-04-08 17:48:53\n",
       "  __main()\n",
       "  ____get_date()\n",
-      "  ______> day0 : 2023-03-25\n",
-      "  ______> day1 : 2023-03-26 22:32:11.972772\n",
+      "  ______> day0 : 2023-04-08\n",
+      "  ______> day1 : 2023-04-09 17:48:53.988277\n",
       "  ________pd_get_fixtures_next_match()\n",
-      "  __________Total Row(s) : 6\n",
-      "  ____________[1/6] 183 - 2022 -----#Montrose 4251 - Dunfermline 1388 - 2023-03-25 16:00:00\n",
+      "  __________Total Row(s) : 4\n",
+      "  ____________[1/4] 85 - 2022 -----#Greifswalder FC 16118 - Germania Halberstadt 1643 - 2023-04-08 11:00:00\n",
+      "  ______________pre_first_half_winner_home:1.8\n",
+      "  ______________pre_second_half_winner_home:1.62\n",
+      "  ______________pre_to_win_either_half_home:1.2\n",
+      "  ______________pre_result_total_goals_home_over_25:2.05\n",
+      "  ______________pre_clean_sheet__away_yes:7.0\n",
       "  ____________good_to_go: 1\n",
       "\n",
-      "  ____________[2/6] 875 - 2022 -----#Cristo Atlético 9728 - Laredo 9394 - 2023-03-25 16:00:00\n",
-      "  ____________good_to_go: 0\n",
-      "\n",
-      "  ____________[3/6] 875 - 2022 -----#Bergantiños 9383 - Burgos Promesas 9727 - 2023-03-25 16:00:00\n",
-      "  ____________good_to_go: 0\n",
-      "\n",
-      "  ____________[4/6] 875 - 2022 -----#Guijuelo 9388 - Zamora 9418 - 2023-03-25 16:00:00\n",
-      "  ______________pre_first_half_winner_draw:1.82\n",
+      "  ____________[2/4] 85 - 2022 -----#Chemnitzer FC 1328 - Lichtenberg 9354 - 2023-04-08 11:00:00\n",
+      "  ______________pre_first_half_winner_home:1.8\n",
+      "  ______________pre_second_half_winner_home:1.57\n",
+      "  ______________pre_to_win_either_half_home:1.2\n",
+      "  ______________pre_win_to_nil_home:1.8\n",
+      "  ______________pre_result_total_goals_home_over_25:2.1\n",
+      "  ______________pre_both_teams_score_yes:2.5\n",
+      "  ______________pre_double_chance_draw_away:3.4\n",
+      "  ______________pre_to_win_either_half_away:4.5\n",
       "  ____________good_to_go: 1\n",
       "\n",
-      "  ____________[5/6] 460 - 2022 -----#Praiense 4786 - Rabo Peixe 4787 - 2023-03-25 16:00:00\n",
-      "  ______________pre_first_half_winner_draw:1.97\n",
+      "  ____________[3/4] 39 - 2022 -----#Manchester United 33 - Everton 45 - 2023-04-08 11:30:00\n",
+      "  ______________pre_first_half_winner_home:2.0\n",
+      "  ______________pre_second_half_winner_home:1.73\n",
+      "  ______________pre_to_win_either_half_home:1.29\n",
       "  ____________good_to_go: 1\n",
       "\n",
-      "  ____________[6/6] 877 - 2022 -----#Saguntino 9699 - Olot 9403 - 2023-03-25 16:30:00\n",
-      "  ______________pre_first_half_winner_draw:1.92\n",
+      "  ____________[4/4] 179 - 2022 -----#Celtic 247 - Rangers 257 - 2023-04-08 11:30:00\n",
+      "  ______________pre_second_half_winner_home:1.95\n",
+      "  ______________pre_total_goals_both_teams_to_score_over_yes_25:2.0\n",
       "  ____________good_to_go: 1\n",
       "\n",
-      "# -------------------------------------------------- End at 2023-03-25 22:32:19\n"
+      "# -------------------------------------------------- End at 2023-04-08 17:48:59\n"
      ]
     }
    ],
